with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 17.1

** Allowing blocks & user-defined literals in multi-declarations
Apple blocks and C++ user-defined literals are now correctly allowed in multi-
declarations, e.g.:

    int i, a[2], (^b)(char), f(double), operator~(S&), operator""_x(char)

** C99 language extensions
Fixed printing of C99 language extention names.

** `CDECL_DEBUG` environment variable
If set to an "affirmative" value (one of 1, t, true, y, or yes, case-
insensitive), then **cdecl** will print its process ID and a "waiting for
debugger to attach" message to standard error and wait indefinitely for a
debugger to attach.

** `CDECL_TEST` environment variable
If set to an "affirmative" value (one of 1, t, true, y, or yes, case-
insensitive), then **cdecl** will show constant values for the `__DATE__` and
`__TIME__` macros to facilitate testing.

** Constructor & pre-C99 function qualifiers
`const`, `volatile`, `__restrict`, `final`, and `override` qualifiers are now
syntactically allowed on constructors and pre-c99 functions even though they
are still sematically illegal to give better error messages.

** Digraph & trigraph preprocessor support
Digraphs & trigraphs are now supported by the preprocessor:

    %:define  QD(X)  %:X          // same as: #define QD(X) #X
    ??=define QT(X)  ??=X         // same as: #define QT(X) #X

Additionally when showing macros in either digraph or trigraph mode, the
correct tokens are used:

    cdecl> set digraphs
    cdecl> show QD
    %:define QD(X) %:X

** Digraph & trigraph structured binding support
Digraphs & trigraphs are now correctly supported for structured bindings.

** `--echo-commands` & config files
Commands are now also echoed for those in configuration files.

** File line number
When reading from a file via `-f`, now includes the file name and error line
number in error messages.
