@@ -66,10 +66,10 @@ static cdecl_command_t const CDECL_COMMANDS[] = {
   { L_PRE_P_define,         LANG_ONLY,  LANG_SAME(ANY)                },
   { L_PRE_P_include,        LANG_ONLY,  LANG_SAME(ANY)                },
   { L_PRE_P_undef,          LANG_ONLY,  LANG_SAME(ANY)                },
-  { L_cast,                 PROG_NAME,  LANG_SAME(ANY)                },
+  { L_cast,                 FIRST_ARG,  LANG_SAME(ANY)                },
   { L_class,                FIRST_ARG,  LANG_SAME(class)              },
   { L_const /*cast*/,       FIRST_ARG,  LANG_SAME(NEW_STYLE_CASTS)    },
-  { L_declare,              PROG_NAME,  LANG_SAME(ANY)                },
+  { L_declare,              FIRST_ARG,  LANG_SAME(ANY)                },
   { L_define,               FIRST_ARG,  LANG_SAME(ANY)                },
   { L_dynamic /*cast*/,     FIRST_ARG,  LANG_SAME(NEW_STYLE_CASTS)    },
   { L_enum,                 FIRST_ARG,  LANG_SAME(enum)               },
